<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Menu item title for general Alarm Clock Settings -->
    <string name="settings">Settings</string>

    <!-- Text to display in the small text of the notification -->
    <string name="alarm_notify_text">Select to snooze or dismiss this alarm.</string>
    
    <!-- Text to display in the notification ticker and label -->
    <string name="alarm_notify_snooze_label"><xliff:g id="label">%s</xliff:g> (snoozed)</string>

    <!-- Text to display in the notification when the alarm has been snoozed -->
    <string name="alarm_notify_snooze_text">Alarm set for <xliff:g id="time">%s</xliff:g>. Select to cancel.</string>
    
    <!-- Toast that appears after Alarm is snoozed from the Alarm
         dialog. Says the alarm will snooze for xxx minutes.  -->
    <string name="alarm_alert_snooze_set">Snoozing for <xliff:g id="minutes">%d</xliff:g> minutes.</string>

    <!--
 Setting title for whether the alarm should play in silent mode.
         Usually, silent mode only affects the ringer, but this setting
         will make the alarms respect silent mode too. 
    -->
    <string name="alarm_in_silent_mode_title">Alarm in silent mode</string>
    <!-- Setting summary for whether the alarm should play in silent mode. -->
    <string name="alarm_in_silent_mode_summary">Play alarm even when the phone is in silent mode</string>
    <!-- Setting title for changing the snooze duration. -->
    <string name="snooze_duration_title">Snooze duration</string>
    <!--
 Entries listed in the ListPreference when invoking the snooze duration
         preference. 
    -->
    <string-array name="snooze_duration_entries">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <!--
 Values that are retrieved from the ListPreference. These must match
         the snooze_duration_entries above. 
    -->
    <string-array name="snooze_duration_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

    <!--
    Alarm Alert screen: this message is shown after an alarm rung
         unattended for a number of minutes.  It tells the user that
         the alarm has been silenced.
    -->
    <string name="alarm_alert_alert_silenced">Alarm silenced after<xliff:g id="minutes">%d</xliff:g>minutes</string>

    <!-- Setting title for changing the alarm volume. -->
    <string name="alarm_volume_title">Alarm volume</string>

    <!-- Setting summary for changing the alarm volume. -->
    <string name="alarm_volume_summary">Set the volume of alarms</string>

    <!-- Summary for the alarm preference when silent is chosen. -->
    <string name="silent_alarm_summary">Silent</string>

    <!--
         Alarm confirmation toast: Describes how long from now until
         alarm fires
    -->
    <string-array name="alarm_set">
        <item>This alarm is set for less than 1 minute from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>This alarm is set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g>, <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g>, and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
    </string-array>

    <string name="alarm_repeat">Repeat</string>
    <string name="alert">Ringtone</string>
    <string name="silent_alarm">Silence</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="app_name">Let Me Sleep</string>
    <string name="add_alarm">+ Add alarm</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_new">NEW</string>
    <string name="delete">Delete</string>
    <string name="never">never</string>
    <string name="every_day">every day</string>
    <string name="day_concat">&quot;, &quot;</string>
    <string name="default_label">Alarm</string>
    <string name="time">Time</string>
    <string name="alarm_vibrate">Vibrate</string>
    <string name="label">Label</string>
    <string name="set_alarm">Set alarm</string> <!-- Alarm confirmation toast: singular day -->
    <string name="day">"1 day"</string> <!-- Alarm confirmation toast: plural days -->
    <string name="days">"<xliff:g id="days">%s</xliff:g> days"</string> <!-- Alarm confirmation toast: singular hour -->
    <string name="hour">1 hour</string> <!-- Alarm confirmation toast: plural hours -->
    <string name="hours"><xliff:g id="hours">%s</xliff:g> hours</string> <!-- Alarm confirmation toast: singular minute -->
    <string name="minute">"1 minute"</string> <!-- Alarm confirmation toast: plural minutes -->
    <string name="minutes">"<xliff:g id="minutes">%s</xliff:g> minutes"</string>
    <string name="start_button">Start!</string>
    <string name="do_not_disturb">Do not disturb</string>
    <string name="dnd_summary">Put phone in silent mode</string>
    <string name="enable">Enable</string>
    <string name="dnd_start">DnD start time</string>
    <string name="dnd_end">DnD end time</string>
    <string name="shake_to_snooze">Shake to snooze!</string>
    <string name="snooze">Snooze</string>
    <string name="dismiss">Dismiss</string>

</resources>