<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/shake_to_snooze"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/snooze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dismiss"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/dismiss"
        android:layout_marginBottom="152dp"
        android:gravity="center"
        android:text="@string/snooze" />

    <Button
        android:id="@+id/dismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/snooze"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_marginBottom="35dp"
        android:gravity="center"
        android:text="@string/dismiss" />

</RelativeLayout> 